--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
     <head>
         <meta charset="utf-8">
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Curriculo</title>
+        <title>Traveller's</title>
 
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.css" rel="stylesheet">
@@ -32,23 +32,23 @@
                     </a>
                 </li>
                 <li class="sidebar-brand">
-                    <a href="index.html">Curriculo</a>
+                    <a href="index.html">Traveller's</a>
                     <hr>
                 </li>
                 <li>
                     <a href="#top">Home</a>
                 </li>
                 <li>
-                    <a href="#about">sobre mim</a>
+                    <a href="#about">About</a>
                 </li>
                 <li>
-                    <a href="#services">Qualificações</a>
+                    <a href="#services">Services</a>
                 </li>
                 <li>
-                    <a href="#places">Hobbies</a>
+                    <a href="#places">Places</a>
                 </li>
                 <li>
-                    <a href="#contact">Contato</a>
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -57,11 +57,11 @@
         <!-- Full Page Image Header Area -->
         <div id="top" class="header">
             <div class="vert-text parallax">
-                <h1 class="header-text">Isabelly Reis</h1>
+                <h1 class="header-text">Travel the world</h1>
                 <h3 class="header-text">
-                    <em class="header-text">Meu curriculo</em>
+                    <em class="header-text">So we are here to guide you</em>
                 </h3><br />
-                <a href="#about" class="btn header-btn">Descubra mais</a>
+                <a href="#about" class="btn header-btn">Find Out More</a>
                 <br/>
                 <a href="#about"><img src="img/direction.png" class="space" alt="Direction"></a>
             </div>
@@ -74,7 +74,7 @@
                 <div class="container inner">
                     <div class="row">
                         <div class="text-center">
-                            <h2 class="main-title">Sobre mim</h2>
+                            <h2 class="main-title">About our company</h2>
                             <hr>
                         </div>
                         <div class="divide50"></div>
@@ -82,7 +82,8 @@
                           <figure><img src="img/office.jpg" alt="" style="width: 100%;"></figure>
                         </div>
                         <div class="col-sm-8">
-                          <p>Olá! Me chamo Isabelly Fernada, tenho 15 anos, estudo na Etec Maria Cristina Medeiros. Faço curso de TI(tecnologia da Informação) integrado ao ensino médio</p>
+                          <h4>Our Working Place</h4>
+                          <p>Vestibulum ligut praesent commodo cursus magna, consectetur et. Cum socis natoque penatibus et magnis dis tellus parturient pharetra montes. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas sed diam eget risus varius blandit sit amet non magna. Aenean lacinia bibendum nulla sed consectetur. Vestibulum id ligula porta felis euismod semper. Nullam id dolor id nibh ultricies vehicula ut id elit. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
                         </div>
                       </div>
                       <div class="divide50"></div>
