--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
                 <li>
                     <a href="#about">Sobre</a>
                 </li>
-                <li>
-                    <a href="#services">Serviços</a>
-                </li>
+
                 <li>
                     <a href="#places">Trabalhos</a>
                 </li>
@@ -123,6 +121,12 @@
                                   <div class="bar" style="width: 80%;"></div>
                                 </div>
                               </li>
+                              <li>
+                                <p>Inglês <em>60%</em></p>
+                                <div class="progress plain">
+                                  <div class="bar" style="width: 80%;"></div>
+                                </div>
+                              </li>
                           </ul>
                           <li>
                           <!-- /.progress-list --> 
@@ -160,7 +164,6 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-md-offset-4 text-center">
-                        <h2 class="main-title">Our Services</h2>
                         <hr>
                     </div>
                 </div>
@@ -197,7 +200,6 @@
                 </div>
             </div>
         </div>
-        <!-- /Services -->
 
         <!-- Callout -->
         <div class="callout">
@@ -338,16 +340,16 @@
                     <div class="col-md-6 col-md-offset-3 text-center">
                         <ul class="list-inline">
                             <li>
-                                <i class="fa fa-facebook"></i>
+                                <i class="fa fa-instagram">@_.isaafrs</i>
                             </li>
                             <li>
-                                <i class="fa fa-twitter"></i>
+                                <i class="fa fa-github">isabellyreis</i>
                             </li>
                             <li>
-                                <i class="fa fa-dribbble"></i>
+                                <i class="fa fa-e=mail-message">isabbelyreis@gmail.com</i>
                             </li>
                             <li>
-                                <i class="fa fa-pinterest"></i>
+                                <i class="fa fa-whatsApp">11949765578</i>
                             </li>
                         </ul>
                         <hr>
@@ -380,12 +382,12 @@
                                 <input id="password" type="password" class="form-control input-lg" placeholder="Password">
                             </div>
                             <div class="form-group">
-                                <label for="country">Which country do you want to travel?</label>
+                                <label for="country">Países que quero visitar</label>
                                 <select class="form-control" id="country">
+                                    <option>Londres</option>
+                                    <option>Noruega</option>
                                     <option>Australia</option>
-                                    <option>Bangladesh</option>
-                                    <option>England</option>
-                                    <option>France</option>
+                                    <option>França</option>
                                     <option>U.S.A</option>
                                 </select>
                             </div>
