--- a/index.html
+++ b/index.html
@@ -94,23 +94,23 @@
                             <li>
                               <p>Word <em>80%</em></p>
                               <div class="progress plain">
-                                <div class="bar" style="width: 90%;"></div>
+                                <div class="bar" style="width: 80%;"></div>
                               </div>
                             </li>
                             <li>
                               <p>HTML <em>30%</em></p>
                               <div class="progress plain">
-                                <div class="bar" style="width: 80%;"></div>
+                                <div class="bar" style="width: 30%;"></div>
                               </div>
                             </li>
                             <li>
                               <p>CSS <em>20%</em></p>
                               <div class="progress plain">
-                                <div class="bar" style="width: 85%;"></div>
+                                <div class="bar" style="width: 20%;"></div>
                               </div>
                             </li>
                             <li>
-                              <p>Python <em>90%</em></p>
+                              <p>Python <em>50%</em></p>
                               <div class="progress plain">
                                 <div class="bar" style="width: 50%;"></div>
                               </div>
@@ -118,13 +118,13 @@
                             <li>
                                 <p>Canva <em>60%</em></p>
                                 <div class="progress plain">
-                                  <div class="bar" style="width: 80%;"></div>
+                                  <div class="bar" style="width: 60%;"></div>
                                 </div>
                               </li>
                               <li>
                                 <p>Inglês <em>60%</em></p>
                                 <div class="progress plain">
-                                  <div class="bar" style="width: 80%;"></div>
+                                  <div class="bar" style="width: 60%;"></div>
                                 </div>
                               </li>
                           </ul>
@@ -229,7 +229,7 @@
                     <div class="col-md-6 col-sm-12 col-xs-12">
                         <div class="grid center-block">
                             <figure class="effect-zoe">
-                                <img src="img/washington.jpg" alt="washington" class="img-responsive center-block">
+                                <img src="img/of" alt="washington" class="img-responsive center-block">
                                 <figcaption>
                                     <h2>Washington</h2>
                                     <p class="icon-links">
