--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3 text-center">
-                        <h3>We provide online booking</h3>
-                        <a href="#" class="btn booking-btn text-center" data-toggle="modal" data-target="#booking">Click for Booking !</a>
+                        <h3>Paises que quero conhecer</h3>
+                        <a href="#" class="btn booking-btn text-center" data-toggle="modal" data-target="#booking">Clique Aqui !</a>
                     </div>
                 </div>
             </div>
